--- a/views/checkout/checkout.hbs
+++ b/views/checkout/checkout.hbs
@@ -244,11 +244,14 @@
                     </div>
                 </div>
                 <div id="search-float" class="search-float">
-                    <div class="containe rwide">
-                        <form action="" class="search">
+                    <div class="container wide">
+                        <form action="/" method="get" class="search">
                             <i class="ri-search-line"></i>
-                            <input type="search" class="input" id="" placeholder="Search products">
-                            <i class="ri-close-line" close-button></i>
+                            <input type="search" class="input" id="productName" name="productName"
+                                placeholder="Search products">
+                            {{!-- <button type="submit"> Search </button> --}}
+                            <a href="" class="close-trigger active" close-button>
+                                <i class="ri-close-line"></i></a>
                         </form>
                     </div>
                 </div>
