--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -229,7 +229,7 @@
                     <div class="item swiper-slide">
                         <div class="image">
                             <div class="ob-cover">
-                                <a href="/product/detail/{{this._id}}"><img src="{{this.gallery}}" alt=""></a>
+                                <a href="/product/detail/{{this._id}}"><img src="/images/{{this.gallery}}" alt=""></a>
                             </div>
                             <div class="title-info">
                                 <div class="container wide">
