--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,16 +20,10 @@
 
 <body>
   {{{body}}}
-  <script src="./javascripts/script.js"></script>
+  <script type="module" src="/javascripts/script.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-
-
-
-  {{!-- {{{_sections.scripts}}} --}}
-  <!-- END PAGE LEVEL JAVASCRIPTS -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 
 </html>
